--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 		<li>Cake Bar, Bakery, 1 year</li>
 		<li>Wendys, 3 months</li>
 		<li>Taco Bell, 3 moths</li>
-		<li>BYU Life Science Museum, 3 months</li>`
+		<li>BYU Life Science Museum, 3 months</li>
         </ul>
     <h2>Contact</h2>
     	<ol>
-		<li><a src='https://www.linkedin.com/in/cutler-whitmore-7a99961b5/'>LinkedIn</a></li>
-		<li><a src='https://github.com/cutleraw'>GitHub</a></li>
+		<li><a href='https://www.linkedin.com/in/cutler-whitmore-7a99961b5/'>LinkedIn</a></li>
+		<li><a href='https://github.com/cutleraw'>GitHub</a></li>
   </body>
 </html>
